<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NextDoorDocApp</string>
    <string name="textofexample">TextOfExample</string>
    <string name="testtxt">Nazanin Test</string>
    <string name="btnPatFoodTrack">Food Track</string>
    <string name="btnPatFindDoctor">Find a Doctor</string>
    <string name="btnPatAllPages">Patient pages</string>
    <string name="txtPatCaloriesRemaining">Calories Remaining</string>
    <string name="txtPatGoal">Goal</string>
    <string name="txtPatMinus">-</string>
    <string name="txtPatFood">Food</string>
    <string name="txtPatEqualSign">=</string>
    <string name="txtPatRemaining">Remaining</string>
    <string name="txtPatBreakfast">Breakfast</string>
    <string name="btnPatAddFood" translatable="false">Add  Food</string>
    <string name="btnDocAllpages">Doctor Pages</string>
    <string name="txtHelloDoc">Hello Doctor!</string>
    <string name="btnDocShowMessages">Show Messages</string>
    <string name="btnDocShowSchedule">Arrange schedule</string>
    <string name="txtTitleSchedule">Schedule</string>
    <string name="txtTitleMessages">Messages</string>
    <string name="btnAdminAllPages">Admin Pages</string>
    <string name="searchViewFood">search ....</string>
    <string name="inptPatFood">Enter Food Name</string>
    <string name="inptPatFoodCalorie">Calorie</string>
    <string name="view">View</string>
    <string name="txtPatWelcomeMessage">Welcome to Patient Panel</string>
    <string name="txtPatCloseView">Close View</string>
    <string name="txtPatLunchLbl">Lunch</string>
    <string name="txtPatDinnerLbl">Dinner</string>
    <string name="txtPatAddBreakfast">Add Breakfast Item</string>
    <string name="txtPatAddLunch">Add Lunch Item</string>
    <string name="txtPatAddDinner">Add Dinner Item</string>
    <string name="btnCashierAllpages">Cashier Pages</string>
    <string name="txtHelloCashier">Hello Cashier!</string>
    <string name="btnCheckPmt">Check Payment</string>
    <string name="btnRegisterPmt">Register Payment</string>
    <string name="btnCheck">Check</string>
    <string name="hintPatientID">PatientID</string>
    <string name="txtPmtStatus">Payment Status</string>
    <string name="txtRegisterPmt">Registering Payment</string>
    <string name="txtBalance">Balance:</string>
    <string name="txtDescrPatientId">Enter the Patient ID</string>
    <string name="btnRegisterPatientPmt">Register Payment</string>
    <string name="txtPmtPlusTaxes">Total with Taxes</string>
    <string name="hintAmount">Amount</string>
    <string name="txtPmtMthdDeposit">Deposit or Transfer</string>
    <string name="txtPmtMthdCard">Credit or Debit Card</string>
    <string name="txtPmtMthdCash">Cash</string>
    <string name="txtPmtMethod">Payment Method</string>
    <string name="WelAdmin">Hello Admin!</string>
    <string name="btnAdmReg">Register a New User</string>
    <string name="btnAdmUpdateDetails">Update Information</string>
    <string name="btnAdmMaintenance">Application Maintenance</string>
    <string name="txtAdmRegDetails">Enter the Following details</string>
    <string name="txtAdmRegFName">First Name :</string>
    <string name="txtAdmRegLName">Last Name :</string>
    <string name="txtAdmContact">Cell Number :</string>
    <string name="txtAdmAddress">Full Address :</string>
    <string-array name="spnAdmRole">Choose your role :
        <item>Patient</item>
        <item>Doctor</item>
        <item>Admin</item>
        <item>Cashier</item>
    </string-array>
    <string name="txtAdmRole">Select the role :</string>
    <string name="txtAdmEmail"> Email ID:</string>
    <string name="btnAdmClear"> CLEAR </string>
    <string name="btnAdmNext">NEXT</string>
    <string name="inptPatAddress">Enter your Address</string>
    <string name="txtPatOrLabel">OR</string>
    <string name="inptPatDoctorAddress">Enter Doctor Address</string>
    <string name="inptPatPostalCode">Enter your Postal Code</string>
    <string name="btnPatFindDoctorLabel">Find</string>
    <string name="txtPatDoctorNameLbl">Doctor Name:</string>
    <string name="txtPatDoctorAddressLbl">Address:</string>
    <string name="btnPatDoctorBookAppointment">Book an Appointment</string>
    <string name="btnPatDoctorCheckAvailability">Check Availability</string>
    <string name="btnPatDoctorGetOnlineHelp">Get Online Help</string>
    <string name="txtPatAppointmentDocDays">Day</string>
    <string name="txtPatAppointmentDocTimes">Time</string>
    <string name="txtPatAppointmentDocRegister">Register</string>
    <string name="txtPatAddFoodToList">Add Food Item</string>
    <string name="titleDocTime">Enter the time (in 24hour format):</string>
    <string name="txtDocTimeAvRange2">Time</string>
    <string name="txtToTimeDoc">To</string>
    <string name="txtDocTimeAvRange">Time</string>
    <string name="dataView" />
    <string name="btnDocSetDT">SAVE SCHEDULE</string>
    <string name="btnSplashPage">Splash Page</string>
    <string name="btnLoginPage">Login Page</string>
    <string name="txtLoginWelcome">Welcome to the NextDoorDoc App</string>
    <string name="hintLoginUsername">E-mail:</string>
    <string name="hintLoginPassword">Password:</string>
    <string name="btnLogin">Login</string>
    <string name="txtLoginSignUp">Don\'t have and account? Sign-up here</string>
    <string name="txtLoginIssues">Login Issues?</string>
    <string name="btnContactOurSupport">Contact Our Support</string>
    <string name="txtTitleContactOurSupport">Contact Our Support</string>
    <string name="txtContactSupportMessage">Give us your contact information and describe your request.</string>
    <string name="txtContactSupportMessage2">If you prefer, call us on 555–555–555 from Monday to Friday 8:00 to 17:00hs or send a mail to help@nextdoordoc.com</string>
    <string name="txtContactSupportDesc">Please, describe your request.</string>
    <string name="txtLblContactSupportContactData">Please, insert your e-mail and phone number</string>
    <string name="hintContactSupportUsername">E-mail:</string>
    <string name="hintContactSupportPhone">Phone:</string>
    <string name="hintContactSupportDescription">Description:</string>
    <string name="btnContactSupportSend">Send</string>
    <string name="txtPatientRegistMessage">Please, tell us some info to create your profile:</string>
    <string name="lblRgstPgFirstName">First Name:</string>
    <string name="hintRgstPgFirstName">Firstname</string>
    <string name="lblRgstPgFamilyName">Family Name</string>
    <string name="hintRgstPgFamilyName">Family Name</string>
    <string name="lblRgstPgEmail">E-mail:</string>
    <string name="hintRgstPgEmail">your@email.com</string>
    <string name="txtRgstPgExplainingEmail">Will be your Username</string>
    <string name="lblRgstPgPassword">Password:</string>
    <string name="hintRgstPgPassword">Password</string>
    <string name="lblRgstPgPhone">Phone No:</string>
    <string name="hintRgstPgPhone">Phone</string>
    <string name="lblRgstPgAddress">Address:</string>
    <string name="hintRgstPgAddress">102–300, Example Rd, Mycity, BC, Canada</string>
    <string name="lblRgstPgPCode">Postal Code:</string>
    <string name="hintRgstPgPCode">X1X1X1</string>
    <string name="txtRgstPgDOB">Date of Birth:</string>
    <string name="hintRgstPgDOB">yyyy/mm/dd</string>
    <string name="lblRgstPgHeight">Height in meters:</string>
    <string name="hintRgstPgHeight">1.89</string>
    <string name="txtRgstPgM">m</string>
    <string name="lblRgstPgWeight">Weight in Kg:</string>
    <string name="hintRgstPgWeight">79.6</string>
    <string name="txtRgstPgKg">kg</string>
    <string name="lblRgstPgGender">Gender:</string>
    <string name="lblRgstPgGenderM">M</string>
    <string name="lblRgstPgGenderF">F</string>
    <string name="lblRgstPgGenderOther">Other</string>
    <string name="spnRgstPgGender">Gender</string>
    <string name="lblRgstPgInsuranceNumber">Insurance (MSP)</string>
    <string name="hintRgstPgInsuranceNumber">X36000000000</string>
    <string name="btnRgstPgCreateProfile">Create Profile</string>
    <string name="txtPatMessageLbl">Message</string>
    <string name="txtEditPatMessageHint">Enter message here...</string>
    <string name="txtPatAmountToPayLabel">Amount</string>
    <string name="txtPatDollarSign">$</string>
    <string name="btnPatSendMessageLbl">Send Message</string>
    <string name="btnPatSendMessageAndPay">Pay and Send Message</string>
    <string name="txtAdmRegPage2">Continue Entering the Information</string>
    <string name="txtAdmPatientAllergies">Allergies</string>
    <string name="txtAdmPatientMedicine">Medicine</string>
    <string name="txtAdmPatientDiseases">Diseases</string>
    <string name="txtAdmSINRegistration">SIN</string>
    <string name="txtAdmDOB">Date of Birth</string>
    <string name="txtAdmGender">Gender</string>
    <string name="txtAdmDocOfficeInfoCity">City</string>
    <string name="txtAdmDocOfficeInfoPCode">Postal Code</string>
    <string name="txtAdmRegtContinue">Continue Filling out the following</string>
    <string name="txtMessageForDoc" />
    <string name="btnReplyMessageDoc">Reply</string>
    <string name="txtReplyMessageDoc">Enter your Reply...</string>
    <string name="btnMessageSendDoc">Send</string>
    <string name="txtTitleReplyDoc">Reply to Patient:</string>
    <string name="txtTitleNewMessage">New Message from Patient:</string>
    <string name="txtDocShowAllAvailibility" />
    <string name="btnDocGoHome">HOME</string>
    <string name="btnDocAddMoreSchedule">Add More</string>
    <string name="txtTitleDocAllSchedule">Show schedule:</string>
    <string name="btnDocGoToShowSch">Show Schedule</string>
    <string name="lblRgstPgDOB">Date of Birth:</string>
    <string name="lblRgstPgAllergies">Allergies:</string>
    <string name="hintRgstPgAllergies">Allergies</string>
    <string name="lblRgstPgDisease">Diseases:</string>
    <string name="hintRgstPgDisease">Diseases</string>
    <string name="lblRgstPgMedicine">Medicines:</string>
    <string name="hintRgstPgMedicine">Medicines</string>
    <string name="lblRgstPgStreet">Street:</string>
    <string name="hintRgstPgStreet">Example Rd</string>
    <string name="lblRgstPgCity">City:</string>
    <string name="hintRgstPgCity">City</string>
    <string name="lblRgstPgState">Province:</string>
    <string name="hintRgstPgState">Province</string>
    <string name="lblRgstPgCountry">Country:</string>
    <string name="hintRgstPgCountry">Country</string>
    <string name="btnRgstPgCreatePatient">Create Profile</string>
    <string name="btnPatient">Patient</string>
    <string name="btnDoctor">Doctor</string>
    <string name="btnAdmin">Admin</string>
    <string name="btnCashier">Cashier</string>
    <string name="tvEmailSender">Text View</string>
    <string name="tvEmailTitle">Text View</string>
    <string name="tvEmailDetails">Text View</string>
    <string name="tvEmailTime">Text View</string>
    <string name="tvIcon">A</string>
    <string name="btnReplyDocToMessage">Reply</string>
    <string name="txtInsertPatIDReply">Patenit ID</string>
    <string name="btnPatFinalSaveInfo">Save Your Daily Information</string>
    <string name="btnPatientCheckMessage">Check Messages</string>
    <string name="txtTitleNewMessagePat">New Message From Doc:</string>
    <string name="btnBackHomeToPatient">Back to Home</string>
    <string name="txtViewNEwMEssagePatFromDoc">No New Message!!</string>
    <string name="txtTitlePDShowSchedule">Show Doctors availabilty</string>
    <string name="btnPatOkCheckedSchedule">Ok</string>
    <string name="btnRgstPgCBackToLogin">Back to Login</string>
    <string name="spinspinnerPatAppointmentDocTime2">Select time</string>
    <string name="btnAppReset">Reset Password</string>
    <string name="btnAppDelete">Delete User</string>
    <string name="lblAppDeleteResetUser">Enter the EmailID to delete the user or to reset password</string>
</resources>