<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivityPg1">

    <TextView
        android:id="@+id/txtLoginWelcome"
        android:layout_width="336dp"
        android:layout_height="95dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/txtLoginWelcome"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLoginUsername"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/hintLoginUsername"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginWelcome"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintLoginPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginUsername"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/txtLoginActvSignUp"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/txtLoginSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginActLogin" />

    <Button
        android:id="@+id/btnLoginActLogin"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />

    <TextView
        android:id="@+id/txtLoginIssues"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center_horizontal"
        android:text="@string/txtLoginIssues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginActvSignUp" />

    <Button
        android:id="@+id/btnContactOurSupport"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/btnContactOurSupport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginIssues" />
</androidx.constraintlayout.widget.ConstraintLayout>